Fixed Z-Index

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -40,6 +40,7 @@
 		height: 490px;
 		animation: rotate 20s infinite;
 		filter: blur(20px);
+		z-index: 5;
 	}
 	.text {
 		font-size: 20px;
